Finalized 'gradio_sms_text_classification.ipynb' code

--- a/gradio_sms_text_classification.ipynb
+++ b/gradio_sms_text_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,64 +43,127 @@
     "    The fitted pipeline is returned to make future predictions.\n",
     "    \"\"\"\n",
     "    # Set the features variable to the text message column.\n",
-    "    features = sms_text_df['text_message']\n",
-    "\n",
+    "    features = sms_text_df['text_message'] # Set features to the text message column\n",
+    "    \n",
     "    # Set the target variable to the \"label\" column.\n",
-    "    target = sms_text_df['label']\n",
+    "    target = sms_text_df['label'] # Set target to the label column\n",
     "    \n",
     "    # Split data into training and testing and set the test_size = 33%\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.33, random_state=42)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.33, random_state=42) # Split the data\n",
     "    \n",
     "    # Build a pipeline to transform the test set to compare to the training set.\n",
     "    text_clf = Pipeline([\n",
-    "        ('tfidf', TfidfVectorizer()),\n",
-    "        ('clf', LinearSVC())\n",
+    "        ('tfidf', TfidfVectorizer()), # TF-IDF vectorization\n",
+    "        ('clf', LinearSVC()) # Linear Support Vector Classification\n",
     "    ])\n",
     "    \n",
     "    # Fit the model to the transformed training data and return model.\n",
-    "    text_clf.fit(X_train, y_train)\n",
+    "    text_clf.fit(X_train, y_train) # Fit the model to the training data\n",
     "    return text_clf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                                                                                                              label  \\\n",
-      "0                                                                                                                                                label,text_message   \n",
-      "1                                             ham,\"Go until jurong point, crazy.. Available only in bugis n great world la e buffet... Cine there got amore wat...\"   \n",
-      "2                                                                                                                                 ham,Ok lar... Joking wif u oni...   \n",
-      "3  spam,Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive entry question(std txt rate)T&C's apply 08452810075over18's   \n",
-      "4                                                                                                             ham,U dun say so early hor... U c already then say...   \n",
-      "\n",
-      "  text_message  \n",
-      "0          NaN  \n",
-      "1          NaN  \n",
-      "2          NaN  \n",
-      "3          NaN  \n",
-      "4          NaN  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>text_message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Go until jurong point, crazy.. Available only in bugis n great world la e buffet... Cine there got amore wat...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive entry question(std txt rate)T&amp;C's apply 08452810075over18's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Nah I don't think he goes to usf, he lives around here though</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  label  \\\n",
+       "0   ham   \n",
+       "1   ham   \n",
+       "2  spam   \n",
+       "3   ham   \n",
+       "4   ham   \n",
+       "\n",
+       "                                                                                                                                                  text_message  \n",
+       "0                                              Go until jurong point, crazy.. Available only in bugis n great world la e buffet... Cine there got amore wat...  \n",
+       "1                                                                                                                                Ok lar... Joking wif u oni...  \n",
+       "2  Free entry in 2 a wkly comp to win FA Cup final tkts 21st May 2005. Text FA to 87121 to receive entry question(std txt rate)T&C's apply 08452810075over18's  \n",
+       "3                                                                                                            U dun say so early hor... U c already then say...  \n",
+       "4                                                                                                Nah I don't think he goes to usf, he lives around here though  "
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the dataset into a DataFrame\n",
-    "sms_text_df = pd.read_csv('Resources/SMSSpamCollection.csv', delimiter='\\t', header=None, names=['label', 'text_message'])\n",
-    "\n",
-    "# Print the head of the DataFrame to check the data\n",
-    "print(sms_text_df.head())\n",
-    "\n"
+    "sms_text_df = pd.read_csv(\"Resources/SMSSpamCollection.csv\", sep=',')\n",
+    "# Display the first few rows of the DataFrame to verify the data is loaded correctly\n",
+    "sms_text_df.head() # Display the first few rows of the dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_classes.py:31: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Call the sms_classification function with the DataFrame and set the result to the \"text_clf\" variable\n",
     "text_clf = sms_classification(sms_text_df)"
@@ -108,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a function called `sms_prediction` that takes in the SMS text and predicts the whether the text is \"not spam\" or \"spam\". \n",
+    "# Create a function called `sms_prediction` that takes in the SMS text and predicts whether the text is \"not spam\" or \"spam\".\n",
     "# The function should return the SMS message, and say whether the text is \"not spam\" or \"spam\".\n",
     "def sms_prediction(text):\n",
     "    \"\"\"\n",
@@ -129,27 +192,29 @@
     "    classified as spam or not.\n",
     "    \"\"\"\n",
     "    # Create a variable that will hold the prediction of a new text.\n",
-    "    prediction = text_clf.predict([text])[0]\n",
+    "    prediction = text_clf.predict([text])[0] # Predict the classification of the input text using the pre-trained model\n",
     "    \n",
     "    # Using a conditional if the prediction is \"ham\" return the message:\n",
     "    # f'The text message: \"{text}\", is not spam.' Else, return f'The text message: \"{text}\", is spam.'\n",
-    "    if prediction == \"ham\":\n",
-    "        return f'The text message: \"{text}\", is not spam.'\n",
+    "    if prediction == 'ham':\n",
+    "        return f'The text message: \"{text}\", is not spam.' # Return this message if the prediction is \"ham\"\n",
     "    else:\n",
-    "        return f'The text message: \"{text}\", is spam.'\n"
+    "        return f'The text message: \"{text}\", is spam.' # Return this message if the prediction is \"spam\"\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7866\n",
-      "Running on public URL: https://335522b7abc5a083f2.gradio.live\n",
+      "Running on local URL:  http://127.0.0.1:7863\n",
+      "Running on public URL: https://31aab450be23ac0406.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -157,7 +222,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://335522b7abc5a083f2.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://31aab450be23ac0406.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -165,67 +230,32 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Define a simple function for the app\n",
-    "def sms_classification(sms_text):\n",
-    "    # Placeholder function to demonstrate Gradio app functionality\n",
-    "    # In a real scenario, this would involve the actual SMS classification logic\n",
-    "    return \"Processed SMS: \" + sms_text\n",
+    "# Create a Gradio Interface application for SMS classification\n",
+    "def sms_prediction_interface():\n",
+    "    \"\"\"\n",
+    "    Create and launch a Gradio Interface application for SMS spam detection.\n",
     "\n",
-    "# Create a Gradio interface application\n",
-    "sms_app = gr.Interface(\n",
-    "    fn=sms_classification,  # The function to be called for input processing\n",
-    "    inputs=gr.Textbox(lines=5, placeholder=\"Type your SMS here...\", label=\"Enter SMS Text\", elem_id=\"input_textbox\"),  # Input textbox with label\n",
-    "    outputs=gr.Textbox(lines=5, placeholder=\"The processed SMS will appear here...\", label=\"Processed SMS Text\", elem_id=\"output_textbox\"),  # Output textbox with label\n",
-    "    title=\"SMS Classification App\",\n",
-    "    description=\"A simple Gradio app to demonstrate SMS text classification. Enter your SMS text and get the processed output.\"\n",
-    ")\n",
+    "    This function creates a Gradio Interface application that takes a text input for SMS messages\n",
+    "    and provides a prediction of whether the message is spam or not.\n",
+    "    \"\"\"\n",
+    "    # Define the input and output components for the Gradio Interface\n",
+    "    input_textbox = gr.Textbox(lines=2, placeholder=\"Enter your SMS text here...\", label=\"Input SMS Text\")\n",
+    "    output_textbox = gr.Textbox(label=\"Prediction\")\n",
     "\n",
-    "# Add custom CSS to enhance the appearance\n",
-    "sms_app.css = \"\"\"\n",
-    "#input_textbox {\n",
-    "    border: 2px solid #4CAF50;\n",
-    "    border-radius: 5px;\n",
-    "    padding: 10px;\n",
-    "    font-size: 16px;\n",
-    "}\n",
-    "#output_textbox {\n",
-    "    border: 2px solid #f44336;\n",
-    "    border-radius: 5px;\n",
-    "    padding: 10px;\n",
-    "    font-size: 16px;\n",
-    "    background-color: #f9f9f9;\n",
-    "}\n",
-    ".gradio-container {\n",
-    "    font-family: 'Arial', sans-serif;\n",
-    "}\n",
-    ".gr-button {\n",
-    "    background-color: #4CAF50;\n",
-    "    color: white;\n",
-    "    border: none;\n",
-    "    border-radius: 5px;\n",
-    "    padding: 10px 20px;\n",
-    "    text-align: center;\n",
-    "    text-decoration: none;\n",
-    "    display: inline-block;\n",
-    "    font-size: 16px;\n",
-    "    margin: 4px 2px;\n",
-    "    cursor: pointer;\n",
-    "}\n",
-    "\"\"\"\n",
+    "    # Create the Gradio Interface application with the defined inputs, outputs, and the prediction function\n",
+    "    sms_app = gr.Interface(fn=sms_prediction, inputs=input_textbox, outputs=output_textbox, \n",
+    "                           title=\"SMS Spam Detection\", description=\"Enter an SMS text to check if it is spam or not.\")\n",
     "\n",
-    "# Launch the app with a public link\n",
-    "sms_app.launch(share=True)"
+    "    # Launch the app with a public link\n",
+    "    sms_app.launch(share=True)\n",
+    "\n",
+    "# Call the function to create and launch the Gradio Interface application\n",
+    "sms_prediction_interface()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -241,6 +271,13 @@
     "3. You won 2 free tickets to the Super Bowl text us to claim your prize.\n",
     "4. Thanks for registering. Text 4343 to receive free updates on medicare."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
