--- a/gradio_sms_text_classification.ipynb
+++ b/gradio_sms_text_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,10 +51,10 @@
     "    # Split data into training and testing and set the test_size = 33%\n",
     "    X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.33, random_state=42) # Split the data\n",
     "    \n",
-    "    # Build a pipeline to transform the test set to compare to the training set.\n",
+    " # Build a pipeline to transform the test set to compare to the training set.\n",
     "    text_clf = Pipeline([\n",
-    "        ('tfidf', TfidfVectorizer()), # TF-IDF vectorization\n",
-    "        ('clf', LinearSVC()) # Linear Support Vector Classification\n",
+    "        ('tfidf', TfidfVectorizer()),\n",
+    "        ('clf', LinearSVC(dual='auto'))  # Setting the dual parameter explicitly\n",
     "    ])\n",
     "    \n",
     "    # Fit the model to the transformed training data and return model.\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4                                                                                                Nah I don't think he goes to usf, he lives around here though  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,18 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\HP\\anaconda3\\Lib\\site-packages\\sklearn\\svm\\_classes.py:31: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Call the sms_classification function with the DataFrame and set the result to the \"text_clf\" variable\n",
     "text_clf = sms_classification(sms_text_df)"
@@ -171,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,15 +197,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7863\n",
-      "Running on public URL: https://31aab450be23ac0406.gradio.live\n",
+      "Running on local URL:  http://127.0.0.1:7860\n",
+      "Running on public URL: https://f4255b15a47c19e9bf.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -222,7 +213,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://31aab450be23ac0406.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://f4255b15a47c19e9bf.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
