Finalized 'gradio_sms_text_classification.ipynb' and 'sms_text_classification_solution.ipynb'

--- a/gradio_sms_text_classification.ipynb
+++ b/gradio_sms_text_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,10 +144,10 @@
     }
    ],
    "source": [
-    "# Load the dataset into a DataFrame\n",
+    "# Load dataset into a DataFrame\n",
     "sms_text_df = pd.read_csv(\"Resources/SMSSpamCollection.csv\", sep=',')\n",
     "# Display the first few rows of the DataFrame to verify the data is loaded correctly\n",
-    "sms_text_df.head() # Display the first few rows of the dataframe"
+    "sms_text_df.head() # Display the first few rows of dataframe"
    ]
   },
   {
@@ -243,7 +243,7 @@
     "    # Launch the app with a public link\n",
     "    sms_app.launch(share=True)\n",
     "\n",
-    "# Call the function to create and launch the Gradio Interface application\n",
+    "# Call function to create and launch the Gradio Interface application\n",
     "sms_prediction_interface()\n",
     "\n",
     "\n"
