--- a/sms_text_classification_solution.ipynb
+++ b/sms_text_classification_solution.ipynb
@@ -616,7 +616,7 @@
     "                     ('clf', LinearSVC(dual='auto')),  # Explicitly set the 'dual' parameter to 'auto'\n",
     "])\n",
     "\n",
-    "# Fit the model to the transformed training data.\n",
+    "# Fit model to the transformed training data.\n",
     "text_clf.fit(X_train, y_train)"
    ]
   },
